refactor: entities