@@ -6,14 +6,10 @@ import com.github.riannegreiros.springcloud.springcloud.entities.User;
 import com.github.riannegreiros.springcloud.springcloud.repositories.AlbumRepository;
 import com.github.riannegreiros.springcloud.springcloud.repositories.RecentlyHeardRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.EntityNotFoundException;
-import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RecentlyHeardService {
@@ -30,18 +26,14 @@ public class RecentlyHeardService {
         RecentlyHeard recentlyHeard = new RecentlyHeard();
         recentlyHeard.setUser(user);
         recentlyHeard.setAlbum(album);
-        recentlyHeard.setListenedAt(LocalDate.now());
         recentlyHeardRepository.save(recentlyHeard);
     }
 
-    public List<Album> loadRecentHeard() {
-        User currentUser = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        int limit = 4;
-
-        List<RecentlyHeard> recentlyHeardList = recentlyHeardRepository.findByUserOrderByCreatedAtDesc(currentUser, PageRequest.of(0, limit));
-
-        return recentlyHeardList.stream()
+    public List<Album> getRecentHeards(Long userId) {
+        // Assuming RecentlyHeard has a ManyToOne relationship with Album
+        return recentlyHeardRepository.findTop4ByUserIdOrderByCreatedAtDesc(userId)
+                .stream()
                 .map(RecentlyHeard::getAlbum)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
